1、重写配置；2、新增CoreUserServiceTest测试用例；3、jsqlparser升级为1.3版本